import java.util.List;

public class Turma {
     private String semestre;
    private int numeroDeAlunos;
    private Professor professor;
    private List<Aluno> alunos;

    public boolean adicionarAluno(Aluno aluno) {
        // TODO implementação
        return false;
    }

    public boolean removerAluno(Aluno aluno) {
        // TODO implementação
        return false;
    }

    public int verificarNumeroAlunos() {
        // TODO implementação
        return 0;
    }

    public void encerrarMatriculas() {
        // TODO implementação
    }

    public void associarProfessor(Professor professor) {
        // TODO implementação
    }
}
