import java.util.List;

public class Curso {
    private String nome;
    private int numeroDeCreditos;
    private List<Disciplina> disciplinas;

    public void adicionarDisciplina(Disciplina disciplina) {
        // TODO implementação
    }

    public void removerDisciplina(Disciplina disciplina) {
        // TODO implementação
    }

    public List<Disciplina> listarDisciplinas() {
        // TODO implementação
        return null;
    }
}