

public class Disciplina {
    private String nome;
    private String codigo;
    private int numeroDeCreditos;
    private boolean status;

    public void adicionarTurma(Turma turma) {
        // TODO implementação
    }

    public void removerTurma(Turma turma) {
        // TODO implementação
    }

    public boolean verificarAtivacao() {
        // TODO implementação
        return false;
    }

    public void encerrarMatriculas() {
        // TODO implementação
    }
}
