public class Usuario {
    private String login;
    private String senha;

    public boolean autenticar(String login, String senha) {
        // TODO implementação
        return false;
    }

    public void alterarSenha(String login, String senha, String novaSenha) {
        // TODO implementação
    }
}
